# rustTorrent

./: .dockerignore  .env.example  .gitignore  .taurignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.indexarr.yml  docker-compose.yml  openissues.md  package-lock.json  package.json  runme.md
.gitea/workflows/: deploy.yml
.github/workflows/: ci.yml  desktop-build.yml  docker-deploy.yml  release-linux.yml  release-osx.yml  release-windows.yml  test.yml
bench/: .env  docker-compose.yml  run.sh
bench/mock_seeder/: Dockerfile  mock_seeder.py
bench/orchestrator/: Dockerfile  orchestrator.py  requirements.txt
bench/prometheus/: prometheus.yml
bench/seeder/: Dockerfile  settings.json
bench/tracker/: Dockerfile  tracker.py
benchv2/: Cargo.toml  Dockerfile  docker-compose.yml  run.sh
benchv2/src/: bencode.rs  charts.rs  config.rs  datagen.rs  docker.rs  main.rs  metrics.rs  mock_seeder.rs  report.rs  runner.rs  tracker.rs
benchv2/src/clients/: mod.rs  qbittorrent.rs  rtbit.rs  transmission.rs
crates/: README.md
crates/bencode/: Cargo.toml
crates/buffers/: Cargo.toml
crates/buffers/src/: lib.rs
crates/clone_to_owned/: Cargo.toml
crates/dht/: Cargo.toml
crates/dht/src/: bep44_crypto.rs  bprotocol.rs  dht.rs  error.rs  lib.rs  mutable_item_store.rs  peer_store.rs  persistence.rs  routing_table.rs
crates/librtbit/: Cargo.toml  README.md
crates/librtbit/examples/: custom_storage.rs  simulate_traffic.rs  ubuntu.rs
crates/librtbit/src/: api.rs  api_error.rs  bitv.rs  category.rs  chunk_tracker.rs  create_torrent_file.rs  dht_utils.rs  error.rs  file_info.rs  file_ops.rs  http_api_client.rs  http_api_types.rs  lib.rs  limits.rs  peer_connection.rs  piece_tracker.rs  queue_manager.rs  read_buf.rs  session.rs  stream_connect.rs  tracing_subscriber_config_utils.rs  upnp_server_adapter.rs  watch.rs
crates/librtbit/src/http_api/: auth.rs  mod.rs  webui.rs
crates/librtbit/src/http_api/handlers/: configure.rs  dht.rs  indexarr.rs  logging.rs  mod.rs  other.rs  playlist.rs  qbit_compat.rs  rss.rs  streaming.rs  torrents.rs
crates/librtbit/src/mse/: mod.rs  rc4.rs
crates/librtbit/src/peer_info_reader/: mod.rs
crates/librtbit/src/rss/: config.rs  db.rs  mod.rs  models.rs  monitor.rs
crates/librtbit/src/session/: helpers.rs  mod.rs  network.rs  peer_sources.rs  types.rs
crates/librtbit/src/session_persistence/: json.rs  mod.rs  postgres.rs
crates/librtbit/src/session_stats/: mod.rs  snapshot.rs
crates/librtbit/src/storage/: mod.rs
crates/librtbit/src/storage/examples/: inmemory.rs
crates/librtbit/src/storage/filesystem/: fs.rs  opened_file.rs
crates/librtbit/src/storage/middleware/: write_through_cache.rs
crates/librtbit/src/tests/: cancel_init.rs  e2e.rs  e2e_another_local_client.rs  mod.rs  test_util.rs
crates/librtbit/src/torrent_state/: initializing.rs  mod.rs  stats.rs  streaming.rs
crates/librtbit/src/torrent_state/live/: mod.rs  peer_handler.rs  super_seed.rs  tasks.rs  webseed.rs
crates/librtbit/src/torrent_state/live/peer/: mod.rs
crates/librtbit/src/torrent_state/live/peers/: mod.rs
crates/librtbit/webui/: CLAUDE.md  eslint.config.js  index.html  mock.html  package.json
crates/librtbit/webui/architecture/: virtualization.md
crates/librtbit/webui/public/: openapi.json
crates/librtbit/webui/src/: api-types.ts  context.tsx  http-api.ts  main-mock.tsx  main.tsx  mock-api.ts  rqbit-web.tsx  rtbit-web.tsx
crates/librtbit/webui/src/components/: CardLayout.tsx  ErrorComponent.tsx  FileListInput.tsx  Footer.tsx  Header.tsx  IndexarrBrowse.tsx  IndexarrSetup.tsx  LogLine.tsx  LogStream.tsx  RSSPage.tsx  RootContent.tsx  SettingsButtons.tsx  Sidebar.tsx  StatusIcon.tsx  Toolbar.tsx  TorrentCardContent.tsx  TorrentContextMenu.tsx
crates/librtbit/webui/src/helper/: bencodeParse.ts  customSetInterval.ts  getCompletionETA.ts  loopUntilSuccess.ts  torrentFilters.ts
crates/librtbit/webui/src/hooks/: useKeyboardShortcuts.ts
crates/librtbit/webui/src/stores/: authStore.ts  columnStore.ts  indexarrStore.ts  rssStore.ts  uiStore.ts
crates/librtbit_core/: Cargo.toml
crates/librtbit_core/src/: directories.rs  error.rs  hash_id.rs  magnet.rs  speed_estimator.rs  torrent_metainfo.rs
crates/librtbit_lsd/: Cargo.toml
crates/librtbit_lsd/src/: lib.rs
crates/peer_binary_protocol/: Cargo.toml
crates/peer_binary_protocol/src/: lib.rs
crates/peer_binary_protocol/src/extended/: mod.rs  ut_holepunch.rs
crates/rtbit/: Cargo.toml
crates/rtbit/src/: main.rs
crates/sha1w/: Cargo.toml
crates/sha1w/src/: lib.rs
crates/tracker_comms/: Cargo.toml
crates/tracker_comms/src/: tracker_comms.rs  tracker_comms_http.rs  tracker_comms_udp.rs
crates/upnp/: Cargo.toml
crates/upnp-serve/: Cargo.toml
crates/upnp-serve/examples/: upnp-stub-server.rs
crates/upnp-serve/src/: http_server.rs  lib.rs  ssdp.rs  state.rs  subscriptions.rs
crates/upnp-serve/src/services/: content_directory.rs
desktop/: README.md  index.html  package.json
desktop/src/: api.tsx  configuration.tsx  configure.tsx  index.html  main.tsx  rtbit-desktop.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: config.rs  main.rs
desktop/src/styles/: index.css
docker/: Dockerfile  Dockerfile.xx
docker/compose-examples/: server.yaml
documentation/: IndexarrRustTorrentIntegration.md
linux-torrents/: AlmaLinux-9.7-x86_64.torrent  Rocky-9.7-x86_64-boot.torrent  Rocky-9.7-x86_64-dvd.torrent  Rocky-9.7-x86_64-minimal.torrent  debian-13.4.0-amd64-DVD-1.iso.torrent  debian-edu-13.4.0-amd64-netinst.iso.torrent  kali-linux-2025.4-hyperv-amd64.7z.torrent  kali-linux-2025.4-installer-arm64.iso.torrent  kali-linux-2025.4-installer-netinst-arm64.iso.torrent  kali-linux-2025.4-live-arm64.iso.torrent  kali-linux-2025.4-live-everything-amd64.iso.torrent  kali-linux-2025.4-qemu-amd64.7z.torrent  kali-linux-2025.4-virtualbox-amd64.7z.torrent  kali-linux-2025.4-vmware-amd64.7z.torrent
scripts/: fetch-linux-torrents.sh
systemd/: rtbit.conf  rtbit.service  rtbit.socket
(+35 files in other folders)
