[package]
name = "benchv2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bollard = { version = "0.17", default-features = false }
anyhow = "1"
dashmap = "6"
percent-encoding = "2"
futures-util = "0.3"
tokio-util = "0.7"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
