[package]
name = "librtbit-sha1-wrapper"
version = "4.1.0"
edition = "2024"
description = "Common interface around various sha1 implementations used in rtbit torrent client."
license = "Apache-2.0"
documentation = "https://docs.rs/librtbit-sha1-wrapper"
repository = "https://github.com/ikatson/rtbit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html#

[features]
default = ["sha1-crypto-hash"]
sha1-crypto-hash = ["crypto-hash"]
sha1-ring = ["aws-lc-rs"]

[dependencies]
assert_cfg.workspace = true
crypto-hash = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
